--- a/sass/site/blog/single-post-layouts/_single-post-common.scss
+++ b/sass/site/blog/single-post-layouts/_single-post-common.scss
@@ -64,14 +64,6 @@
 			}
 		}
 	}
-
-	/*Page builder single post meta*/
-	&.ast-page-builder-template{
-		.entry-header {
-	  		padding-left: 20px;
-			padding-right: 20px;
-	  	}
-	}
 }
 /* 2 - Single Post Article Header */
 .single {
