--- a/sass/site/layout/_layout.scss
+++ b/sass/site/layout/_layout.scss
@@ -152,8 +152,6 @@ body{
 		margin-top: 4em;
 		margin-left: auto;
 		margin-right: auto;
-		padding-left: ($grid-gutter-width / 2);
-		padding-right: ($grid-gutter-width / 2);
 
 		&.ast-header-without-markup {
  			margin-top: 0;
